--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ h1 {
 * {
 	padding: 0;
 	margin: 0;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
@@ -38,9 +39,18 @@ img {
 
 /* helpers */
 .flex {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -64,9 +74,18 @@ header {
 }
 
 main {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 	gap: 7rem;
 	max-width: 90%;
@@ -80,6 +99,8 @@ main {
 }
 
 .main-content {
+	-webkit-box-ordinal-group: 2;
+	-ms-flex-order: 1;
 	order: 1;
 }
 
@@ -100,7 +121,7 @@ main {
 }
 
 .cta {
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 	text-align: center;
 	color: var(--violet);
 	width: 60%;
@@ -108,6 +129,9 @@ main {
 	margin: 0 auto;
 	border-radius: 2rem;
 	background-color: var(--white);
+	box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
+	-webkit-box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
+	-moz-box-shadow: 9px 10px 5px -6px rgba(0, 0, 0, 0.54);
 }
 
 svg {
@@ -119,7 +143,11 @@ svg {
 }
 
 footer {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
 	gap: 1.5rem;
 	padding: 6rem 0 0 0;
